# mcx_simulation

./: .gitignore  FMTData_human.py  fix_green.py  gen_config.py  gen_mul_projection.py  gen_test_blt_all_data.py  gen_test_blt_config.py  gen_test_blt_other_data.py  get_simple_projection.py  green_gen.py  load_jnii.py  main.py  make_green_mat.py  preview.py  pyproject.toml  save_green_mat.py  show_projection.py  simple_gen.py  simple_pattern_shape_gen.py  test.jnii  test.json  test.py  vis_3d.py  volume.json  why.json
20250924/: 0.json
only_for_test/0/: proj.npz
only_for_test/3/: 3.json
